@@ -1654,6 +1654,10 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     <dd>Defines whether to suggest a database name on the
         &quot;Create Database&quot; form or to keep the textfield empty.</dd>
 
+    <dt id="cfg_ShowDbStructureLastUpdate">$cfg['ShowDbStructureLastUpdate'] boolean</dt>
+    <dd>Defines whether the database structure page (tables list) has a 
+        &quot;Last update&quot; column that displays the timestamp for each table.</dd>
+
     <dt id="cfg_NavigationBarIconic">$cfg['NavigationBarIconic'] string</dt>
     <dd>Defines whether navigation bar buttons and the right panel top menu
         contain text or symbols only. A value of TRUE displays icons, FALSE
