@@ -223,6 +223,8 @@ $strConfigForm_Sql_validator = __('SQL Validator');
 $strConfigForm_Sql_validator_desc = __('If you wish to use the SQL Validator service, you should be aware that [strong]all SQL statements are stored anonymously for statistical purposes[/strong].[br][em][a@http://sqlvalidator.mimer.com/]Mimer SQL Validator[/a], Copyright 2002 Upright Database Technology. All rights reserved.[/em]');
 $strConfigForm_Startup = __('Startup');
 $strConfigForm_Startup_desc = __('Customize startup page');
+$strConfigForm_DbStructure = __('Database structure');
+$strConfigForm_DbStructure_desc = __('Choose which details to show in the database structure (list of tables)');
 $strConfigForm_Tabs = __('Tabs');
 $strConfigForm_Tabs_desc = __('Choose how you want tabs to work');
 $strConfigForm_Text_fields = __('Text fields');
@@ -457,6 +459,8 @@ $strConfigShowAll_name = __('Allow to display all the rows');
 $strConfigShowChgPassword_desc = __('Please note that enabling this has no effect with [kbd]config[/kbd] authentication mode because the password is hard coded in the configuration file; this does not limit the ability to execute the same command directly');
 $strConfigShowChgPassword_name = __('Show password change form');
 $strConfigShowCreateDb_name = __('Show create database form');
+$strConfigShowDbStructureLastUpdate_desc = __('Show or hide a column displaying the Last update timestamp for all tables');
+$strConfigShowDbStructureLastUpdate_name = __('Show Last update timestamp');
 $strConfigShowDisplayDirection_desc = __('Defines whether or not type display direction option is shown when browsing a table');
 $strConfigShowDisplayDirection_name = __('Show display direction');
 $strConfigShowFieldTypesInDataEditView_desc = __('Defines whether or not type fields should be initially displayed in edit/insert mode');
